# image_Remover

./: .gitignore  README.md  ai-quality-assessment.py  batch_processor.py  drag_drop_support.py  exif_display.py  image_cleanup_gui.py  image_cleanup_system.py  image_zoom_widget.py  main.py  main_application.py  pyproject.toml  requirements.txt  run_tests.py  settings_manager.py  simipix.py  simipix_app.py  thumbnail-view.py  画像クリーナー改善ロードマップ.txt  要件.txt  設定画面説明.txt
core/: blur_detection.py  duplicate_detection.py  file_manager.py  image_processor.py  image_scanner.py  similarity_detection.py
gui/: main_window.py  settings_dialog.py  workers.py
gui/dialogs/: settings_dialog.py
gui/styles/: dark.qss  light.qss
gui/widgets/: preview_widget.py  results_tabs_widget.py  table_items.py
readme/: extending_guide.txt  file_structure.txt  installation_guide.txt  user_guide.txt
src/core/: similarity_detection.py
src/gui/: main_window.py  workers.py
src/gui/dialogs/: settings_dialog.py
src/gui/styles/: dark.qss  light.qss
src/gui/widgets/: filter_widgets.py  preview_widget.py  results_tabs_widget.py  table_items.py
src/image_cleaner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/utils/: cache_handler.py  config_handler.py  file_operations.py  results_handler.py
tests/: test-image-cleanup-system.py  test-image-zoom-widget.py  test-main-application.py  test-runner.py  test_batch_processor.py  test_drag_drop_support.py  test_main_application_part2.py  test_settings_manager.py
ui/: app_ui.py
utils/: cache_handler.py  config_handler.py  file_operations.py  image_loader.py  results_handler.py
